test/fail/suggest-type-ai.mo
//MOC-FLAG --ai-errors
import Prim "mo:⛔";

type T = Prim.Types.Num;
